--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
 	"dependencies": {
 		"classnames": "^2.3.1",
 		"konva": "^8.3.9",
+		"lodash": "^4.17.21",
 		"react": "^18.0.0",
 		"react-beautiful-dnd": "^13.1.0",
 		"react-dom": "^18.0.0",
 		"react-konva": "^18.1.1"
 	},
 	"devDependencies": {
-		"eslint": "^8.17.0",
+		"@types/eslint": "^8.4.3",
 		"@types/react": "^18.0.0",
 		"@types/react-dom": "^18.0.0",
 		"@vitejs/plugin-react": "^1.3.0",
+		"eslint": "^8.17.0",
 		"sass": "^1.52.3",
-		"vite": "^2.9.9"
+		"vite": "^2.9.9",
+		"vite-plugin-eslint": "^1.6.1"
 	}
 }
