--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "classnames": "^2.3.1",
         "konva": "^8.3.9",
         "lodash": "^4.17.21",
+        "moment": "^2.29.3",
         "react": "^18.0.0",
         "react-beautiful-dnd": "^13.1.0",
         "react-dom": "^18.0.0",
