--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "react": "^18.0.0",
         "react-beautiful-dnd": "^13.1.0",
         "react-dom": "^18.0.0",
-        "react-konva": "^18.1.1"
+        "react-konva": "^18.1.1",
+        "react-modal": "^3.15.1"
     },
     "devDependencies": {
         "@types/eslint": "^8.4.3",
