--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "konva": "^8.3.9",
         "lodash": "^4.17.21",
         "moment": "^2.29.3",
+        "rc-slider": "^10.0.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-konva": "^18.1.1",
