--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     },
     "devDependencies": {
         "@types/eslint": "^8.4.3",
-        "@types/react": "^18.0.0",
+        "@types/lodash": "^4.14.182",
+        "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.0",
+        "@typescript-eslint/eslint-plugin": "^5.30.5",
+        "@typescript-eslint/parser": "^5.30.5",
         "@vitejs/plugin-react": "^1.3.0",
         "eslint": "^8.17.0",
         "eslint-config-airbnb": "^19.0.4",
@@ -30,6 +33,7 @@
         "eslint-plugin-react": "^7.30.0",
         "eslint-plugin-react-hooks": "^4.5.0",
         "sass": "^1.52.3",
+        "typescript": "^4.7.4",
         "vite": "^2.9.9",
         "vite-plugin-eslint": "^1.6.1"
     },
@@ -39,6 +43,9 @@
         "trailingComma": "es5",
         "tabWidth": 4,
         "singleQuote": true,
-        "endOfLine": "auto"
+        "endOfLine": "auto",
+        "options": {
+            "parser": "typescript"
+        }
     }
 }
