--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-react": "^7.30.0",
         "eslint-plugin-react-hooks": "^4.5.0",
+        "prettier": "^2.8.7",
         "sass": "^1.52.3",
         "typescript": "^4.7.4",
         "vite": "^2.9.9",
